# gh-app-auth

./: .gitignore  CHANGELOG.md  README.md  buildspec.yaml  pyproject.toml  requirements.txt
.github/workflows/: release.yaml
gh_app_auth/: __init__.py  cli.py
